update pom.xml for Java 25 and test configuration